# dased_paper

./: .gitignore  README.md  pyproject.toml
notebooks/: amplitude_decay.ipynb  cdv_benchmark.ipynb  cdv_multi.ipynb  cdv_p_and_setup.ipynb  cdv_rayleigh.ipynb  cdv_rayleigh_length.ipynb  cdv_setup.py  helpers.py  interactive_proposal.py  layout_param.ipynb  sensitivity_analysis.ipynb  tomo_schematic.ipynb
notebooks/data/: nodes_full.csv  prior_samples_full_disp.pt  surface_displacement_prior.pt  topo_data.nc
notebooks/data/benchmark/: proposal_points_benchmark.pkl
notebooks/data/optimisation/: proposal_points_single_eigp.pkl  proposal_points_single_rayleigh.pkl  proposal_rayleigh_length.pkl
