[project]
name = "dased-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.6.2",
    "dased",
    "h5netcdf>=1.6.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "numpy<2.0",
    "pyrocko>=2024.1.10",
    "ttcrpy>=1.3.9",
    "vtk>=9.5.1",
]

[tool.uv.sources]
dased = { path = "../dased", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
