[project]
name = "dased-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.6.2",
    "dased @ git+https://github.com/dominik-strutz/dased.git@2025_10_DASED_Paper",
    "geobed @ git+https://github.com/dominik-strutz/GeoBED.git@9947756e8b4eb53a52b081844c73e4db9be32585",
    "h5netcdf>=1.6.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "numpy<2.0",
    "pyrocko>=2024.1.10",
    "ttcrpy>=1.3.9",
    "vtk>=9.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
